--- a/src/assets/fonts/_fonts.scss
+++ b/src/assets/fonts/_fonts.scss
@@ -1,10 +1,21 @@
 @font-face {
     font-family: Campton;
-    src: url('~@/assets/fonts/campton/Campton-LightDEMO.eot');
-    src: url('~@/assets/fonts/campton/Campton-LightDEMO.eot?#iefix') format('embedded-opentype'),
-        url('~@/assets/fonts/campton/Campton-LightDEMO.woff2') format('woff2'),
-        url('~@/assets/fonts/campton/Campton-LightDEMO.woff') format('woff'),
-        url('~@/assets/fonts/campton/Campton-LightDEMO.ttf') format('truetype');
+    src: url('~@/assets/fonts/campton-light/Campton-LightDEMO.eot');
+    src: url('~@/assets/fonts/campton-light/Campton-LightDEMO.eot?#iefix') format('embedded-opentype'),
+        url('~@/assets/fonts/campton-light/Campton-LightDEMO.woff2') format('woff2'),
+        url('~@/assets/fonts/campton-light/Campton-LightDEMO.woff') format('woff'),
+        url('~@/assets/fonts/campton-light/Campton-LightDEMO.ttf') format('truetype');
     font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Campton;
+    src: url('~@/assets/fonts/campton-bold/Campton-BoldDEMO.eot');
+    src: url('~@/assets/fonts/campton-bold/Campton-BoldDEMO.eot?#iefix') format('embedded-opentype'),
+        url('~@/assets/fonts/campton-bold/Campton-BoldDEMO.woff2') format('woff2'),
+        url('~@/assets/fonts/campton-bold/Campton-BoldDEMO.woff') format('woff'),
+        url('~@/assets/fonts/campton-bold/Campton-BoldDEMO.ttf') format('truetype');
+    font-weight: bold;
     font-style: normal;
 }
