--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,2 +1,4 @@
-$el-color: #94bbdc;
+$global-color: #94bbdc;
 $background-color: #f2f5f7;
+$font-size-medium: medium;
+$font-family-global: Campton;
